Closed Bug 18001 Opened 25 years ago Closed 25 years ago

[Tree]browser segfaults on loading the res/samples/treeTest1.xul page

Categories

(Core :: XUL, defect, P3)

Sun
Solaris
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: axel, Assigned: alecf)

References

()

Details

(Whiteboard: 12-JAN waiting for reporter response)

Attachments

(1 file)

If I try to open treeTest1.xul both with the viewer and mozilla, it segfaults:

Tested on M10 and cvs from November 3. treeTest1.xul is cvs-version 1.1 Tue Mar
9 21:53:01 1999
Solaris 7, compiled with egcs-2.91.66

Here the error message:

Loading page specified via openDialog
Check if a view source window
Assertion: "null nsTableList when constructing from below" (aToDo) at file
../../../../../mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp, line
1340
Break: at file
../../../../../mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp, line
1340
Warning: "a non table contains a table row or col group child.
" at file
../../../../../mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp, line
1366
Warning: "an anonymous table frame was created.
" at file
../../../../../mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp, line
1127
Segmentation Fault
Summary: browser segfaults on loading the res/samples/treeTest1.xul page → [Tree]browser segfaults on loading the res/samples/treeTest1.xul page
Assignee: trudelle → alecf
Target Milestone: M13
Moving to Alec & marking M13 since failures in these tests aren't sufficient
proof of need for dogfood.
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
With Chofmann's approval, checked in the patch.

I will be checking in an updated version of treeTest1.xul that conforms to
current tree widget syntax.
Blocks: 22176
Whiteboard: 12-JAN waiting for reporter response
no one is running Solaris in QA. could the reporter give this a try and report here?
So here I am, as requested. Sorry for not testing right away.
Details of the build:
configure --enable-nspr-autoconf --with-mathml

c++ --version
egcs-2.91.66

uname -a
SunOS picard 5.7 Generic_106541-08 sun4u sparc

 ./mozilla-viewer.sh
MOZILLA_FIVE_HOME=/tmp/ah/build/dist/bin
  LD_LIBRARY_PATH=/tmp/ah/build/dist/bin:/home/ah/lib
       SHLIB_PATH=/tmp/ah/build/dist/bin
          LIBPATH=/tmp/ah/build/dist/bin
      MOZ_PROGRAM=./viewer
      MOZ_TOOLKIT=
        moz_debug=0
     moz_debugger=
nsNativeComponentLoader: autoregistering begins.
nsNativeComponentLoader: autoregistering succeeded
nNCL: registering deferred (0)
nsUnixToolkitService: Using 'gtk' for the Widget Toolkit.
nsUnixToolkitService: Using 'gtk' for the Gfx Toolkit.
NS_SetupRegistry() MOZ_TOOLKIT=gtk, WIDGET_DLL=libwidget_gtk.so,
GFX_DLL=libgfx_gtk.so
ProfileName : Axel
ProfileDir  : /home/ah/.mozilla/Axel
Opening file cookperm.txt failed
Going to create the event queue
GFX: dpi=96 t2p=0.0666667 p2t=15 depth=24
WEBSHELL+ = 1
title string = [Example 0 - Raptor]
Note: styleverifytree is disabled
Note: frameverifytree is disabled
Note: verifyreflow is disabled
Assertion failure: aOffset > 0 && aOffset < aLength, at
../../../mozilla/htmlparser/src/nsExpatTokenizer.cpp:221
Abort


This is the error message for both the tree and the toolbar test pages.

Any further hints I can give?

Sorry.

Axel alias pike
Sorry folks, found out that the tree is horked. I will test again, when it goes
sane.
The error message comes as well when starting mozilla. Viewer worked though as
far as I tested.

Sorry

Axel
OK, I had problems with my old config dir. Now I am up and running and the
treeTest1.xul shows up.
Is the result shown in http://www.numerik.uni-kiel.de/~ah/treetest.png the
desired?

Sorry for the crap stuff, that came earlier.

Axel
Status: RESOLVED → VERIFIED
If that screenshot is what you get when loading that test on Solaris then this bug is fixed.
There are other problems, but this bug is fixed. Marking VERIFIED.
No longer blocks: 22176
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: