bug 18001 assertion & crash on treeTest1.xul.  r=hyatt a=chofmann